--- a/xpenses/MainWindow.xaml
+++ b/xpenses/MainWindow.xaml
@@ -1,7 +1,9 @@
 ﻿<Window x:Class="GUI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="xpenses">
+        Title="xpenses"
+        Loaded="MainWindow_Loaded"
+        >
     <Window.Resources>
         <Style TargetType="Button">
             <Setter Property="Height" Value="30"/>
