--- a/xpenses/MainWindow.xaml
+++ b/xpenses/MainWindow.xaml
@@ -1,6 +1,7 @@
 ﻿<Window x:Class="GUI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:localctrl ="clr-namespace:GUI.Controls"
         Title="xpenses">
     <Window.Resources>
         <Style TargetType="Button">
@@ -20,13 +21,14 @@
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <DataGrid Grid.Row="0" Margin="5">
-                
-            </DataGrid>
+            <localctrl:EntriesDataGrid Grid.Row="0" Margin="5"
+                      ItemsSource="{Binding Entries}"
+                      SelectedItemsList="{Binding SelectedEntries, Mode=OneWayToSource}">
+            </localctrl:EntriesDataGrid>
             <StackPanel Grid.Row="1" Orientation="Horizontal">
                 <Button Content="Add" Command="{Binding AddEntryCommand}"/>
                 <Button Content="Edit"/>
-                <Button Content="Remove"/>
+                <Button Content="Remove" Command="{Binding DeleteEntriesCommand}"/>
                 <Button Content="Categories…"/>
             </StackPanel>
         </Grid>
