--- a/xpenses/MainWindow.xaml
+++ b/xpenses/MainWindow.xaml
@@ -3,14 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:localctrl ="clr-namespace:GUI.Controls"
         Title="xpenses">
-    <Window.Resources>
-        <Style TargetType="Button">
-            <Setter Property="Height" Value="30"/>
-            <Setter Property="Width" Value="100"/>
-            <Setter Property="Margin" Value="5"/>
-        </Style>
-    </Window.Resources>
-    <Grid>
+    <Grid Margin="5">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="10"/>
@@ -29,7 +22,7 @@
                 <Button Content="Add" Command="{Binding AddEntryCommand}"/>
                 <Button Content="Edit"/>
                 <Button Content="Remove" Command="{Binding DeleteEntriesCommand}"/>
-                <Button Content="Categories…"/>
+                <Button Content="Categories…" Command="{Binding EditCategoriesCommand}"/>
             </StackPanel>
         </Grid>
         <GridSplitter Grid.Column="1" ResizeDirection="Columns"/>
