--- a/xpenses/Controls/CategoriesEditor.xaml
+++ b/xpenses/Controls/CategoriesEditor.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:GUI.Controls"
              mc:Ignorable="d"
         WindowStartupLocation="CenterOwner"
-        Width="400" Height="300">
+        Width="400" Height="600">
     <Grid Margin="5">
         <Grid.Resources>
             <Style TargetType="{x:Type local:CategoriesListBox}">
@@ -39,7 +39,7 @@
                  DisplayMemberPath="Name"/>
         <local:CategoriesListBox Grid.Row="1" Grid.Column="2"
                  ItemsSource="{Binding Categories}"
-                 SelectedItemsList="{Binding ParentCategories, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                 SelectedItemsList="{Binding ParentCategories, Mode=TwoWay}"
                  SelectionMode="Multiple"
                  DisplayMemberPath="Name"/>
         <Grid Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3">
@@ -60,12 +60,13 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Label Grid.Row="0" Grid.Column="0" Content="Name: "/>
-            <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding CategoryName}"/>
+            <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding CategoryName, UpdateSourceTrigger=PropertyChanged}"/>
             <Label Grid.Row="1" Grid.Column="0" Content="Description: "/>
             <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding CategoryDescription}"/>
         </Grid>
         <StackPanel Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="3"
-                    Orientation="Horizontal" Margin="0,5,0,0">
+                    Orientation="Horizontal" Margin="0,5,0,0"
+                    HorizontalAlignment="Right">
             <Button Content="Add" Command="{Binding AddCategoryCommand}"/>
             <Button Content="Apply" Command="{Binding ApplyParentsCommand}"/>
             <Button Content="Remove" Command="{Binding DeleteCategoryCommand}"/>
